# subclass_shenanigans

./: Cargo.toml
examples/: subclass_abstraction.rs
src/: error.rs  lib.rs  subclass.rs  wrapper.rs
