[package]
name = "subclass_shenanigans"
version = "0.2.0"
authors = ["s33n <sean.kaufman92@gmail.com>"]
edition = "2018"
resolver="2"

[features]
default = ["device"]
# enables device notification helpers
device = ["winapi/commctrl", "winapi/hidclass", "winapi/portabledevice", "winapi/wlanapi", "winapi/winsmcrd", "winapi/usbiodef"]

[dependencies]
thiserror = "1.0"
is_main_thread = "0.1"
winapi = { version = "0.3", features = ["basetsd", "commctrl", "dbt", "winuser"] }

[dev-dependencies]
simple_logger = "1"
anyhow = "1"
winit = "0.25"
regex = "1.5"
widestring = "0.4"